# synq

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/account/application/: exceptions.py  use_cases.py
backend/account/application/interfaces/: auth_service.py  mail_sender.py  password_service.py  uow.py
backend/account/application/read_models/: __init__.py  current_user_read_model.py
backend/account/application/use_cases/: __init__.py  auth_use_cases.py  confirm_email.py  get_current_user.py  login.py  logout.py  register.py
backend/account/domain/: entities.py  repositories.py
backend/account/domain/entities/: account.py
backend/account/domain/ports/: __init__.py  account_repository.py  cache_service.py
backend/account/infrastructure/: models.py  services.py  sqlalchemy_repository.py
backend/account/infrastructure/auth/: __init__.py  jwt_auth_service.py
backend/account/infrastructure/cache/: __init__.py  redis_cache_service.py
backend/account/infrastructure/notifications/: __init__.py  smtp_mail_sender.py
backend/account/infrastructure/persistence/: __init__.py
backend/account/infrastructure/security/: __init__.py  bcrypt_password_service.py
backend/account/infrastructure/uow/: sqlalchemy_uow.py
backend/app/: config.py  db.py  db_registry.py  errors.py  main.py
backend/app/api/: auth_routes.py  dependencies.py  main.py  profile_routes.py  schemas.py
backend/authentication/application/: use_cases.py
backend/authentication/domain/: entities.py  repositories.py
backend/authentication/infrastructure/: account_repository.py  models.py  repositories.py
backend/database/: settings.py
backend/migrations/: env.py
backend/migrations/versions/: 3485a6d7ca92_add_profiles_table.py  426afed18354_create_users_table.py
backend/profile/application/: __init__.py  exceptions.py
backend/profile/application/read_models/: __init__.py  profile_read_model.py
backend/profile/application/use_cases/: __init__.py  create_profile.py  get_my_profile.py  (+2 more)
backend/profile/domain/: entities.py  repositories.py
backend/profile/infrastructure/: models.py  sqlalchemy_repository.py
backend/tests/: conftest.py  fakes.py  test_auth_routes_pytest.py  test_infastructure_services.py  test_profile_use_cases.py  test_sqlachemy_integration.py
(+44 files in other folders)
