[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email,mypy]>=2.12.5",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff",
]

[tool.ruff]
line-length = 79
target-version = 'py313'

[tool.ruff.lint]
select = ["E", "F", "I", "B", "Q"]
fixable = ['ALL']
ignore = ['E101', 'B008']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = "double"

[tool.ruff.format]
quote-style = 'single'

[tool.mypy]
python_version = '3.13'
disallow_untyped_defs = true
strict_optional = true
exclude = [
    'tests/',
    '.venv/',
    '__pycache__'
]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/src/config/consts.py"
]
